Made minor changes to text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Receptor Binding Assays</title>
+  <title>Receptor Binding Assay</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -22,12 +22,15 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>This site explores receptor binding assays through the lens of science, technology, society, and the environment, following Grade 11 physics curriculum.</p>
+      <p>On this site, I explore the world of receptor binding assays through the interconnected lenses of science, technology, society, and the environment. 
+         My goal is to present a clear and balanced understanding of how these assays function at a molecular level, the innovations shaping their evolution,
+         and their broader impact on public health and the planet. I aim to highlight both the opportunities and challenges they present, offering insights 
+         into their practical applications and long-term implications.</p>
     </section>
 
     <section>
       <h2>Overview Video</h2>
-      <iframe width="640" height="360" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Receptor Binding Assay Overview" frameborder="0" allowfullscreen></iframe>
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/js0L6Kdrs0c" title="YouTube video player" frameborder="2" allowfullscreen></iframe>
     </section>
   </main>
 
