Added all links to pages

--- a/environment.html
+++ b/environment.html
@@ -15,6 +15,7 @@
         <li><a href="science.html">Science</a></li>
         <li><a href="technology.html">Technology</a></li>
         <li><a href="society.html">Society</a></li>
+        <li><a href="environment.html">Environment</a></li>
       </ul>
     </nav>
   </header>
