--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Receptor Binding Assays</h1>
     <nav>
       <ul>
+        <li><a href="index.html">Home</a></li>
         <li><a href="science.html">Science</a></li>
         <li><a href="technology.html">Technology</a></li>
         <li><a href="society.html">Society</a></li>
