--- a/science.html
+++ b/science.html
@@ -12,6 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="science.html">Science</a></li>
         <li><a href="technology.html">Technology</a></li>
         <li><a href="society.html">Society</a></li>
         <li><a href="environment.html">Environment</a></li>
